--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 h1 {
   font-size: 96px;
   margin-left: 5%;
+  text-shadow: 5px 5px 10px #333;
 }
 
 main {
@@ -17,7 +18,129 @@ main {
   height: 70vh;
   background-color: #333;
   border-radius: 15px;
-  box-shadow: 2px 2px 5px 1px #eee;
-  -webkit-box-shadow: 2px 2px 5px 1px #eee;
-  -moz-box-shadow: 2px 2px 5px 1px #eee;
+  position: relative;
+  padding: 2rem;
+  box-shadow: 2px 2px 10px 1px #eee;
+  -webkit-box-shadow: 2px 2px 10px 1px #eee;
+  -moz-box-shadow: 2px 2px 10px 1px #eee;
+}
+
+.cross {
+  height: 200px;
+  width: 40px;
+  border-radius: 10px;
+  background: #eee;
+  top: 30%;
+  left: 50%;
+  position: absolute;
+}
+
+.cross.two {
+  transform: translateX(-50%) rotate(90deg);
+}
+
+.cross.one {
+  transform: translateX(-50%);
+}
+
+p {
+  font-size: 4rem;
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+}
+
+#add_first {
+  top: 0;
+  left: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+}
+
+article {
+  background-color: #222;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  align-items: center;
+  border-radius: 10px;
+  text-align: center;
+  box-shadow: 0px 0px 10px 0px #eee;
+  -webkit-box-shadow: 0px 0px 10px 0px #eee;
+  -moz-box-shadow: 0px 0px 10px 0px #eee;
+}
+
+textarea {
+  resize: none;
+  height: 1.7rem;
+  text-align: justify;
+}
+
+article input, article textarea {
+  background: transparent;
+  border: none;
+  color: #eee;
+  font-size: 1.5rem;
+  width: 190px;
+  text-align: center;
+}
+
+article h2 {
+  width: 308px;
+  box-shadow: 0px 7px 4px -4px #eee;
+  -webkit-box-shadow: 0px 7px 4px -4px #eee;
+  -moz-box-shadow: 0px 7px 4px -4px #eee;
+}
+
+h2 input {
+  width: 280px;
+  font-size: 2.5rem;
+}
+
+button {
+  width: 50px;
+  height: 50px;
+  border: none;
+}
+
+ul {
+  font-size: 1.5rem;
+  margin-block: 0.5rem;
+}
+
+li > textarea {
+  vertical-align: text-top;
+}
+
+li > button {
+  vertical-align: bottom;
+}
+
+.bin {
+  background-image: url(icons8-bin-96.png);
+  background-color: transparent;
+  background-size: cover;
+}
+
+.add {
+  background-image: url(icons8-plus-64.png);
+  background-color: transparent;
+  background-size: cover;
+}
+
+nav {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  padding: 0.5rem;
+}
+
+textarea:focus, input:focus {
+  outline: none;
+}
+
+textarea:focus + button {
+  visibility: visible;
 }/*# sourceMappingURL=style.css.map */
