--- a/style.scss
+++ b/style.scss
@@ -7,6 +7,7 @@ body{
     font-family: 'Comfortaa' ;
     color: #eee;
     
+    
 }
 h1{
     font-size: 96px;
@@ -27,8 +28,36 @@ main{
     -webkit-box-shadow: 2px 2px 10px 1px $teritary;
     -moz-box-shadow: 2px 2px 10px 1px $teritary;
 
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    align-items: flex-start;
+   overflow-y: scroll;
+  justify-content: center;
+
+   gap: 2rem;
+  
+
 }
-.cross{
+main::-webkit-scrollbar{
+    width: 20px;
+}
+main::-webkit-scrollbar-track{
+    background-color: $secondary;
+     box-shadow: inset 0px 0px 5px 1px $teritary;
+    -webkit-box-shadow:inset 0px 0px 5px 1px $teritary;
+    -moz-box-shadow:inset 0px 0px 5px 1px $teritary;
+    border-radius: 10px;
+}
+main::-webkit-scrollbar-thumb{
+    background-color: $primary-color;
+    box-shadow:inset 0px 0px 5px 0px $teritary;
+    -webkit-box-shadow:inset 0px 0px 5px 0px $teritary;
+    -moz-box-shadow: inset 0px 5px 0px $teritary;
+    border-radius: 20px;
+}
+
+ .cross{
     height: 200px;
     width: 40px;
     border-radius: 10px;
@@ -41,11 +70,11 @@ main{
 }
 .cross.two{
 
-    transform:  translateX(-50%) rotate(90deg);
+    transform:  translate(-50%, -50%) rotate(90deg);
 
 }
 .cross.one{
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
 }
 p{
     font-size: 4rem;
@@ -74,11 +103,13 @@ article{
     box-shadow: 0px 0px 10px 0px $teritary;
     -webkit-box-shadow: 0px 0px 10px 0px $teritary;
     -moz-box-shadow: 0px 0px 10px 0px $teritary;
+
+    
    
 }
 textarea{
     resize: none;
-    height: 1.7rem;
+    height: 1.5rem;
     text-align: justify;
 }
 article input ,article textarea{
@@ -117,7 +148,7 @@ li > textarea {
     vertical-align: text-top;
 }
 li > button{
-    vertical-align: bottom;
+    vertical-align:middle;
    // visibility: hidden;
 }
 
@@ -143,6 +174,19 @@ textarea:focus, input:focus {
   outline: none;
   
 }
-textarea:focus + button{
-    visibility: visible;
+
+.AddArticleDiv .cross{
+    height: 200px;
+    width: 40px;
+    top: 50%;
+    
+    
 }
+.AddArticleDiv{
+    position: relative;
+    height: 200px;
+    width: 200px;
+    align-self: center;
+   
+}
+
